# calculator

./: .gitignore  CMakeLists.txt  README.md
src/: Calculator.cpp  Calculator.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.cpp  Token.h  TokenType.h  main.cpp
tests/: tests.cpp
